syntax = "proto3";

package good.middleware.app.good1.like.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/good/middleware/v1/app/good/like";

import "basetypes/v1/conds.proto";

message LikeReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string UserID = 30;
    optional string AppGoodID = 40;
    optional bool   Like = 50;
}

message Like {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"user_id"
    string UserID = 40;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 50;
    // @inject_tag: sql:"good_name"
    string GoodName = 60;
    // @inject_tag: sql:"like"
    bool   Like = 70;
    // @inject_tag: sql:"good_id"
    string GoodID = 80;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.StringVal EntID = 20;
    optional basetypes.v1.StringVal AppID = 30;
    optional basetypes.v1.StringVal UserID = 40;
    optional basetypes.v1.StringVal AppGoodID = 50;
    optional basetypes.v1.StringSliceVal AppGoodIDs = 60;
    optional basetypes.v1.StringVal GoodID = 70;
}

